finalizing comments (except get by user)
